# Pontus

./: .gitignore  .gitmodules  README.md  qixstack.toml  up.py
.github/workflows/: ci-ros-jazzy.yaml  ros-ci.yaml
YOLOv8 Testing/: img Generator.py
YOLOv8 Testing/NEW MODEL 2.22.24/: args.yaml  results.csv
YOLOv8 Testing/USING MODEL/: RealTimeObjectTracking  robosub.ipynb
onboarding/: package.xml  setup.cfg  setup.py
pontus_autonomy/: package.xml  setup.cfg  setup.py
pontus_autonomy/launch/: autonomy.launch.py  run_info_visualizer.launch.py
pontus_autonomy/pontus_autonomy/: autonomy_state.py  base_run.py  full_nav_run.py  gate_information_service.py  gate_node.py  new_prequal.py  octagon_surface_test_run.py  path_marker_run.py  path_planning_test_run.py  prequal_run_sim.py  prequalification_node.py  prequalification_run.py  prequalification_run_localization.py  semi_run_localization.py  slalom_run.py  submerge_and_stay_run_localization.py  waypoint_run.py  waypoint_run_sim.py
pontus_autonomy/test/: test_flake8.py
pontus_bringup/: README.md  package.xml  setup.cfg  setup.py
pontus_bringup/config/: topics.yaml
pontus_bringup/launch/: auv.launch.py  direct_auv.launch.py  hybrid_auv.launch.py  odom_simulation.launch.py  odom_simulation.py  odom_simulation_slalom.launch.py  simulation.launch.py  simulation.py
pontus_bringup/pontus_bringup/: topic_config.py
pontus_bringup/scripts/: record_all_topics.sh  teensy_reboot.sh
pontus_bringup/test/: .flake8  test_flake8.py
pontus_controller/: README.md  package.xml  setup.cfg  setup.py
pontus_controller/launch/: direct_control.launch.py  hybrid_control.launch.py  los_control.launch.py  (+3 more)
pontus_cv/: readme.md
pontus_description/: CMakeLists.txt  README.md  package.xml
pontus_description/launch/: description.launch.py  spawn.launch.py  spawn.py
pontus_description/models/pontus/: pontus.xacro  pontus_real.xacro
pontus_description/models/pontus/components/: battery_tubes.xacro  lights.xacro  sensors.xacro  subsystems.xacro  thrusters.xacro
pontus_description/models/pontus/meshes/: T200_body.STL  T200_prop.STL  tech_triton.STL
pontus_description/pontus_description/: vehicle_parameter_server.py  vehicle_params_helper.py
pontus_description/test/: .flake8  test_flake8.py
pontus_localization/: README.md  package.xml  setup.cfg  setup.py
pontus_mapping/: package.xml  setup.cfg  setup.py
pontus_msgs/: CMakeLists.txt  package.xml
pontus_msgs/action/: GoToPose.action  SearchRegion.action
pontus_msgs/msg/: AutonomyState.msg  Blueviewping.msg  CommandMode.msg  NamedPoint.msg  ParticleList.msg  SemanticMap.msg  SemanticMetaGate.msg  SemanticMetaSlalom.msg  SemanticMetaSlalomRow.msg  SemanticObject.msg  SlalomDetectionResults.msg  YOLOResultArray.msg  YOLOResultArrayPose.msg
pontus_msgs/pontus_msgs/: message_enums.py
pontus_msgs/srv/: AddMetaGate.srv  AddSemanticObject.srv  GateInformation.srv  GateSideInformation.srv  GetGateLocation.srv  GetPathToObject.srv  GetVerticalMarkerLocation.srv  SetEnum.srv
pontus_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
pontus_perception/: package.xml  setup.cfg  setup.py
pontus_sensors/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
pontus_sensors/config/: blueview.yaml  dvl.yaml  front_left_camera_calibration.yaml  front_right_camera_calibration.yaml  low_light_angled.yaml  low_light_camera_down.yaml  low_light_camera_left.yaml  low_light_camera_middle_left.yaml  low_light_camera_right.yaml  microstrain.yaml  sonoptix.yaml
pontus_sensors/config/calibration/: front_left_camera_calibration.yaml  front_right_camera_calibration.yaml
pontus_sensors/include/: blueview_ros_driver.hpp  blueview_wrapper.hpp
pontus_sensors/launch/: camera.launch.py  dvl.launch.py  imu.launch.py  low_light.launch.py  sonar.launch.py  sonoptix.launch.py
pontus_sensors/pontus_sensors/: .imu_republish.py.swo  .imu_republish.py.swp  basic_sonoptix_driver.py  bottom_camera.py  camera_info_publisher.py  camera_republish.py  depth_republish.py  dvl_republish.py  dvl_republish_sim.py  imu_monitor.py  imu_republish.py  oak_imu_republish.py  sim_camera_tf_broadcaster.py  sim_odom_tf_broadcaster.py  sonoptix.py  sonoptix_driver.cpp  sonoptix_driver.py
pontus_sensors/scripts/: imu_monitor.py
pontus_sensors/src/: blueview_ros_driver.cpp  blueview_wrapper.cpp  dvl_processor.cpp  sonoptix_driver.cpp
pontus_sensors/test/: test_flake8.py
pontus_sim/: CMakeLists.txt  README.md  package.xml
pontus_sim/config/: bridge.yml  odom_bridge.yml
pontus_sim/env-hooks/: pontus_sim.sh.in
pontus_sim/launch/: odom_bridge.launch.py  odom_bridge.py  sim.launch.py  sim.py  spawn.launch.py
pontus_sim/models/Gate/: model.config  model.sdf
pontus_sim/models/Gate/meshes/: RobosubGate.blend  RobosubGate.blend1  RobosubGate.mtl  Robosubgate2025.mtl
pontus_sim/models/GateLeftImageLabel/: model.config  model.sdf
pontus_sim/models/GateLeftLabel/: model.config  model.sdf
pontus_sim/models/GateRightImageLabel/: model.config  model.sdf
pontus_sim/models/GateRightLabel/: model.config  model.sdf
pontus_sim/models/Octagon/: model.config  model.sdf
pontus_sim/models/PathMarker/: model.config  model.sdf
pontus_sim/models/PathMarker/meshes/: PathMarker.dae  PathMarker.mtl
pontus_sim/models/Slalom/: model.config  model.sdf
pontus_sim/models/Slalom/meshes/: Slalom.mtl
pontus_sim/models/SlalomCenterLabel/: model.config  model.sdf
pontus_sim/models/SlalomLeftLabel/: model.config  model.sdf
pontus_sim/models/SlalomRightLabel/: model.config  model.sdf
pontus_sim/models/Table/: model.config  model.sdf
pontus_sim/models/Table/meshes/: Table.mtl
pontus_sim/models/TorpedoTag/: model.config  model.sdf
pontus_sim/models/TorpedoTag/meshes/: TorpedoTag.mtl
pontus_sim/pontus_sim/: sim_thruster_bridge.py
pontus_sim/test/: test_flake8.py
pontus_sim/worlds/: bin.world  comp.world  octagon_surface.world  prequal.world  search_test.world  sensor.world  slalom.world  test.world  underwater.sdf  underwater.world
pontus_tools/: package.xml  setup.cfg  setup.py
(+169 files in other folders)
