<?xml version="1.0"?>
<package format="3">
  <name>pontus_msgs</name>
  <version>1.0.0</version>
  <description>Custom messages for Pontus</description>
  <maintainer email="gtmrobotics@gmail.com">GT MRG</maintainer>
  <license>TODO</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
